--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid #ddd;
+  border: 3px solid rgba(228, 135, 13, 0.548);
   border-radius: 8px;
   overflow: hidden;
   text-align: center;
@@ -10,7 +10,8 @@
   transition: box-shadow 0.3s ease;
   flex: 1 1 calc(33.333% - 2rem); /* Adjust for three cards per row with some margin */
   box-sizing: border-box;
-  background-color: white; /* Add a solid background color */
+  background-color: rgba(0, 0, 0, 0.8); /* Add a solid background color */
+  
 }
 
 .card:hover {
@@ -27,7 +28,7 @@
 
 .card-image-container {
   width: 100%;
-  height: 200px; /* Set a fixed height for images */
+  height: 256px; /* Set a fixed height for images */
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -60,7 +61,7 @@
   display: block;
   padding: 0.5rem 1rem;
   margin: 1rem auto;
-  background-color: #0066cc;
+  background-color: rgba(228, 135, 13, 0.548);
   color: white;
   text-decoration: none;
   border-radius: 4px;
@@ -69,7 +70,7 @@
 }
 
 .view-details-button:hover {
-  background-color: #005bb5;
+  background-color: black;
 }
 
 /* Responsive styling for mobile */
