--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,8 +1,10 @@
 .header {
-    background-color: gray;
+    background-color: rgba(228, 135, 13, 0.548);
+    color:white;
     padding: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 15px;
+    border-radius: 10px;
 }
