--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -2,7 +2,11 @@
 .navbar {
     background-color: #333;
     padding: 1rem;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: rgba(228, 135, 13, 1);
+    border-radius: 10px;
   }
   
   .navbar-container {
