--- a/src/components/styles/ProgressWheelCard.css
+++ b/src/components/styles/ProgressWheelCard.css
@@ -3,7 +3,8 @@
     padding: 1rem;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: white;
+    border-color: orange;
+    /* background-color: white; */
     text-align: center;
     margin: 0.5rem; /* Add margin to space out cards */
   }
@@ -39,7 +40,7 @@
     width: 80%;
     height: 80%;
     border-radius: 50%;
-    background-color: white;
+    background-color: rgb(22, 21, 21);
     transform: translate(-50%, -50%);
   }
   
