--- a/src/pages/styles/T38C.css
+++ b/src/pages/styles/T38C.css
@@ -1,11 +1,10 @@
 .t38c-container {
-  width: 90%;
+  width: 100%;
   max-width: 1500px;
   margin: auto;
-  padding: 2rem;
-  background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  color:white;
 }
 
 .t38c-header {
@@ -34,7 +33,7 @@
 
 .photo-grid{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 1rem;
 }
 
