--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -15,10 +15,11 @@
     align-items: center;
   }
   
-  .navbar-logo {
+  .navbar-logo a {
     color: white;
     font-size: 1.5rem;
     text-transform: uppercase;
+    text-decoration: none;
   }
   
   .navbar-menu {
