--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family:'Courier New', Courier, monospace;
     background-image: url('../public/background.jpg');
     background-size: cover;
     background-position: center;
