--- a/src/pages/styles/T38C.css
+++ b/src/pages/styles/T38C.css
@@ -20,8 +20,25 @@
 .external-model,
 .cockpit-model,
 .flight-model,
+.avionics
 .liveries {
   margin-bottom: 2rem;
+}
+
+.progress-updates,
+.external-model,
+.cockpit-model,
+.flight-model,
+.avionics a {
+  color: orange;
+}
+
+.progress-updates,
+.external-model,
+.cockpit-model,
+.flight-model,
+.avionics p {
+  color: white;
 }
 
 .progress-grid {
@@ -40,7 +57,8 @@
 .external-model-image,
 .cockpit-model-image,
 .flight-model img,
-.liveries img {
+.liveries img, 
+.avionics iframe{
   max-width: 100%;
   height: auto;
   border-radius: 8px;
@@ -51,9 +69,46 @@
 .external-model-image:hover,
 .cockpit-model img:hover,
 .flight-model img:hover,
-.liveries img:hover {
+.liveries img:hover, 
+.avionics iframe:hover {
   transform: scale(1.05);
 }
+
+.video-grid {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr;
+}
+
+/* two columns once there’s room */
+@media (min-width: 600px) {
+  .video-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* max three columns */
+@media (min-width: 900px) {
+  .video-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 
 .modal {
   display: flex;
